--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # add anime base url.. and add /api/v2/hianime after the main url.
 NEXT_PUBLIC_ANIME_BASE_URL=https://hi-amber-three.vercel.app/api/v2/hianime
 AUTH_SECRET=yqsdAIKIgB2YZOTaT4NO9aPNxCbTCzwoGJ36rQJO
+DATABASE_URL=mongodb+srv://oa6vi6:nvg6xc@cluster0.ebz5v.mongodb.net/?retryWrites=true&w=majority
